--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -14,7 +14,7 @@
       <a href="/" class="nav-button">상품</a>
       <a href="/cart" class="nav-button">장바구니</a>
       <a href="/order-history" class="nav-button">주문목록</a>
-      <a href="/user/login" class="nav-button">로그인</a>
+      <a href="/login" class="nav-button">로그인</a>
     </div>
   </nav>
 
@@ -34,7 +34,7 @@
     const credentials = sessionStorage.getItem('accessToken');
     if (!credentials) {
       alert('사용자 정보가 없습니다.');
-      window.location.href = '/user/login';
+      window.location.href = '/login';
       return;
     }
 
