--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" th:href="@{/css/index.css}">
-  <title>cart</title>
+    <meta charset="UTF-8"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <title>cart</title>
 </head>
 <body>
 <div class="root">
-  <nav class="nav flex justify-end">
-    <div class="flex-center gap-15">
-      <a href="/" class="nav-button">상품</a>
-      <a href="/cart" class="nav-button">장바구니</a>
-      <a href="/order-history" class="nav-button">주문목록</a>
-      <a href="/login" class="nav-button">로그인</a>
-    </div>
-  </nav>
+    <nav class="nav flex justify-end">
+        <div class="flex-center gap-15">
+            <a class="nav-button" href="/">상품</a>
+            <a class="nav-button" href="/cart">장바구니</a>
+            <a class="nav-button" href="/order-history">주문목록</a>
+            <a class="nav-button" href="/login">로그인</a>
+        </div>
+    </nav>
 
-  <section class="cart-section">
-    <div class="cart-list">
-    </div>
-    <!--    TODO: [4단계] 장바구니 아이템 전체 주문 시 아래 주석을 해제하여 연동 -->
-    <!--    <div class="flex justify-between items-center mt-30">-->
-    <!--      <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>-->
-    <!--    </div>-->
-  </section>
+    <section class="cart-section">
+        <div class="cart-list">
+        </div>
+        <div class="flex justify-between items-center mt-30">
+            <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>
+        </div>
+    </section>
 </div>
 <script th:src="@{/js/cart.js}"></script>
 <script th:src="@{/js/order.js}"></script>
@@ -38,7 +37,6 @@
             return;
         }
 
-        // TODO: [4단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
         fetch('/cart-items', {
             method: 'GET',
             headers: {
