--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -21,7 +21,7 @@
   <section class="order-section">
     <div class="flex">
       <section class="order-left-section">
-        <h3 class="order-title" th:text="'주문 번호: ' + ${orderId}"></h3>
+        <h3 class="order-title" th:text="'주문 번호: ' + ${receiptId}"></h3>
         <div class="order-item-list">
         </div>
       </section>
@@ -49,10 +49,10 @@
             return;
         }
 
-        const orderId = /*[[${orderId}]]*/ '';
+        const receiptId = [[${receiptId}]];
 
         // TODO: [4단계] 주문 상세 조회 스펙에 맞게 변경
-        fetch('', {
+        fetch('/receipts/' + receiptId, {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
@@ -62,14 +62,14 @@
             return response.json();
         }).then((data) => {
             let element = '<hr class="divide-line-gray mt-10" />';
-            data.items.forEach(orderItem => {
+            data.receiptDetailProducts.forEach(receiptItem => {
                 element += `
                     <div class="shopping-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144" /> <!-- 아이템 이미지 -->
+                        <img class="w-144 h-144" src="/${receiptItem.imageUrl}"/> <!-- 아이템 이미지 -->
                         <div class="flex-col gap-15">
-                          <span class="shopping-name"></span> <!-- 아이템 이름 -->
-                          <span class="shopping-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
+                          <span class="shopping-name">${receiptItem.name}</span> <!-- 아이템 이름 -->
+                          <span class="shopping-info">${receiptItem.price} 원 / 수량: ${receiptItem.quantity} 개</span> <!-- 아이템 가격 및 수량 -->
                         </div>
                       </div>
                     </div>
@@ -78,7 +78,7 @@
             });
 
             document.querySelector('.order-item-list').innerHTML = element;
-            document.querySelector('.order-right-section .order-total-price').innerText = ` 원`; <!-- 아이템 가격 및 수량 -->
+            document.querySelector('.order-right-section .order-total-price').innerText = `"${data.totalPrice}" 원`; <!-- 아이템 가격 및 수량 -->
         }).catch((error) => {
             console.error(error);
         });
