--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -35,6 +35,14 @@
             <span class="highlight-text">총 결제금액</span>
             <span class="highlight-text order-total-price"></span>
           </div>
+          <div class="flex justify-between p-20 mt-20">
+            <span class="highlight-text">환율 적용 가격</span>
+            <span class="highlight-text order-exchanged-price"></span>
+          </div>
+          <div class="flex justify-between p-20 mt-20">
+            <span class="highlight-text">환율</span>
+            <span class="highlight-text order-exchange-rate"></span>
+          </div>
         </div>
       </section>
     </div>
@@ -79,6 +87,8 @@
 
             document.querySelector('.order-item-list').innerHTML = element;
             document.querySelector('.order-right-section .order-total-price').innerText = `"${data.totalPrice}" 원`; <!-- 아이템 가격 및 수량 -->
+            document.querySelector('.order-right-section .order-exchanged-price').innerText = `$ "${data.exchangedPrice}"`
+            document.querySelector('.order-right-section .order-exchange-rate').innerText = `"${data.exchangeRate}"`
         }).catch((error) => {
             console.error(error);
         });
