--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -61,7 +61,6 @@
       return response.json();
     }).then((data) => {
       let element = '<hr class="divide-line-gray mt-10" />';
-      let totalSum = 0;
       data.items.forEach(orderItem => {
         element += `
                     <div class="cart-container">
@@ -75,11 +74,15 @@
                     </div>
                     <hr class="divide-line-thin mt-10"/>
                     `;
-        totalSum += orderItem.price * orderItem.quantity;
       });
+      let totalPrice = `${data.totalPrice}원`;
+      if (data.exchangePrice !== null) {
+        totalPrice += ` / $${(data.exchangePrice).toFixed(2)}`;
+      }
 
       document.querySelector('.order-item-list').innerHTML = element;
-      document.querySelector('.order-right-section .order-total-price').innerText = `${totalSum}원`; <!-- 아이템 가격 및 수량 -->
+      document.querySelector('.order-right-section .order-total-price').innerText = totalPrice; <!-- 아이템 가격 및 수량 -->
+
     }).catch((error) => {
       console.error(error);
     });
