--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -12,7 +12,7 @@
   <nav class="nav flex justify-end">
     <div class="flex-center gap-15">
       <a href="/" class="nav-button">상품</a>
-      <a href="/cart/products" class="nav-button">장바구니</a>
+      <a href="/cart" class="nav-button">장바구니</a>
       <a href="/order-history" class="nav-button">주문목록</a>
       <a href="/login" class="nav-button">로그인</a>
     </div>
@@ -67,6 +67,10 @@
                     </div>
                     `;
             });
+
+            if (element.length === 0) {
+              element = "주문 내역이 없습니다."
+            }
 
             document.querySelector('.order-section').innerHTML = element;
         }).catch((error) => {
