--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -32,8 +32,16 @@
         <hr class="divide-line-thin"/>
         <div class="order-right-section__bottom">
           <div class="flex justify-between p-20 mt-20">
+            <span class="highlight-text">환율</span>
+            <span class="highlight-text order-exchange-rate"></span>
+          </div>
+          <div class="flex justify-between p-20 mt-20">
             <span class="highlight-text">총 결제금액</span>
             <span class="highlight-text order-total-price"></span>
+          </div>
+          <div class="flex justify-between p-20 mt-20">
+            <span class="highlight-text">Total Price</span>
+            <span class="highlight-text order-usd-total-price"></span>
           </div>
         </div>
       </section>
@@ -58,6 +66,7 @@
                 'Content-Type': 'application/json'
             }
         }).then((response) => {
+          console.log(response);
             return response.json();
         }).then((data) => {
             let element = '<hr class="divide-line-gray mt-10" />';
@@ -77,7 +86,9 @@
             });
 
             document.querySelector('.order-item-list').innerHTML = element;
-            document.querySelector('.order-right-section .order-total-price').innerText = `${data.totalPrice} 원`; <!-- 아이템 가격 및 수량 -->
+            document.querySelector('.order-exchange-rate').innerText = `${data.exchangeRate}`; <!-- 환율 -->
+            document.querySelector('.order-total-price').innerText = `${data.totalPrice} 원`; <!-- 아이템 가격 및 수량 -->
+            document.querySelector('.order-usd-total-price').innerText = `${(data.totalPrice / data.exchangeRate).toFixed(2)} Dollar`; <!-- 아이템 가격 및 수량 -->
         }).catch((error) => {
             console.error(error);
             alert('잘못된 접근입니다.')
