--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -31,7 +31,7 @@
     }
 
     // TODO: [4단계] 주문 목록 조회 스펙에 맞게 변경
-    fetch('', {
+    fetch('/order', {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${credentials}`,
@@ -41,16 +41,17 @@
       return response.json();
     }).then((data) => {
       let element = '';
+      console.log(data);
       data.forEach(order => {
         let itemElement = '';
-        order.items.forEach((item) => {
+        order.orderItems.forEach((item) => {
           itemElement += `
                         <div class="order-list-item">
                           <div class="flex gap-15 mt-10">
-                            <img class="w-144 h-144" /> <!-- 상품 이미지 -->
+                            <img class="w-144 h-144" src="../assets/${item.imageFileName}" /> <!-- 상품 이미지 -->
                             <div class="flex-col gap-15">
-                              <span class="order-name"></span> <!-- 상품 이름 -->
-                              <span class="order-info">원 / 수량: 개</span> <!-- 상품 가격 및 수량 -->
+                              <span class="order-name">${item.name}</span> <!-- 상품 이름 -->
+                              <span class="order-info">${item.totalPrice}원 / 수량: ${item.totalQuantity}개</span> <!-- 상품 가격 및 수량 -->
                             </div>
                           </div>
                         </div>
@@ -61,8 +62,8 @@
         element += `
                     <div class="order-list">
                       <div class="order-list__header">
-                        <span>주문 번호: </span> <!-- 주문 번호 -->
-                        <a href="">상세보기 ></a> <!-- 주문 상세 페이지로 연결 -->
+                        <span>주문 번호: ${order.id}</span> <!-- 주문 번호 -->
+                        <a href="/order-detail/${order.id}">상세보기 ></a> <!-- 주문 상세 페이지로 연결 -->
                       </div>
                       ${itemElement}
                     </div>
