--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -31,9 +31,17 @@
         </div>
         <hr class="divide-line-thin"/>
         <div class="order-right-section__bottom">
-          <div class="flex justify-between p-20 mt-20">
+          <div class="flex justify-between p-10 mt-20">
             <span class="highlight-text">총 결제금액</span>
             <span class="highlight-text order-total-price"></span>
+          </div>
+          <div class="flex justify-between p-10 mt-20">
+            <span class="highlight-text">실시간 환율</span>
+            <span class="highlight-text order-exchange-rate"></span>
+          </div>
+          <div class="flex justify-between p-10 mt-20">
+            <span class="highlight-text">총 결제금액 (달러)</span>
+            <span class="highlight-text order-total-price-usd"></span>
           </div>
         </div>
       </section>
@@ -77,8 +85,13 @@
                     `;
       });
 
+      let usdDollar = `${data.totalPrice}`/ `${data.exchangeRate}`;
       document.querySelector('.order-item-list').innerHTML = element;
-      document.querySelector('.order-right-section .order-total-price').innerText = `${data.totalPrice}원`; <!-- 아이템 가격 및 수량 -->
+      document.querySelector('.order-right-section .order-total-price').innerText = `${data.totalPrice}원`;
+      document.querySelector('.order-right-section .order-exchange-rate').innerText = `${data.exchangeRate}원`;
+      document.querySelector('.order-right-section .order-total-price-usd').innerText = usdDollar.toFixed(4);
+
+
     }).catch((error) => {
       console.error(error);
     });
