--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -34,6 +34,7 @@
           <div class="flex justify-between p-20 mt-20">
             <span class="highlight-text">총 결제금액</span>
             <span class="highlight-text order-total-price"></span>
+            <span class="highlight-text order-total-converted-price"></span>
           </div>
         </div>
       </section>
@@ -77,7 +78,10 @@
             });
 
             document.querySelector('.order-item-list').innerHTML = element;
-            document.querySelector('.order-right-section .order-total-price').innerText = `${data.totalPrice} 원`; <!-- 아이템 가격 및 수량 -->
+            document.querySelector(
+                    '.order-right-section .order-total-price').innerText = `${data.totalPrice} 원`; <!-- 아이템 가격 및 수량 -->
+            document.querySelector(
+                    '.order-right-section .order-total-converted-price').innerText = `${data.convertedTotalPrice} 달러`; <!-- 아이템 가격 및 수량 -->
         }).catch((error) => {
             console.error(error);
         });
