--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -30,8 +30,7 @@
             return;
         }
 
-        // TODO: [4단계] 주문 목록 조회 스펙에 맞게 변경
-        fetch('', {
+        fetch('/api/orders', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
@@ -47,10 +46,10 @@
                     itemElement += `
                         <div class="order-list-item">
                           <div class="flex gap-15 mt-10">
-                            <img class="w-144 h-144" /> <!-- 아이템 이미지 -->
+                            <img class="w-144 h-144" src="${item.image}" alt="상품 이미지"/>
                             <div class="flex-col gap-15">
-                              <span class="order-name"></span> <!-- 아이템 이름 -->
-                              <span class="order-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
+                              <span class="order-name">${item.name}</span>
+                              <span class="order-info">${item.price}원 / 수량: ${item.quantity}개</span>
                             </div>
                           </div>
                         </div>
@@ -61,8 +60,8 @@
                 element += `
                     <div class="order-list">
                       <div class="order-list__header">
-                        <span>주문 번호: </span> <!-- 주문 번호 -->
-                        <a href="">상세보기 ></a> <!-- 주문 상세 페이지로 연결 -->
+                        <span>주문 번호: ${order.id}</span>
+                        <a href="/order-detail/${order.id}">상세보기 ></a>
                       </div>
                       ${itemElement}
                     </div>
