--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -49,10 +49,9 @@
       return;
     }
 
-    const orderId = /*[[${orderId}]]*/ '';
+    const orderId = [[${orderId}]];
 
-    // TODO: [4단계] 주문 상세 조회 스펙에 맞게 변경
-    fetch('', {
+    fetch('/api/order/' + orderId, {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${credentials}`,
@@ -62,14 +61,14 @@
       return response.json();
     }).then((data) => {
       let element = '<hr class="divide-line-gray mt-10" />';
-      data.items.forEach(orderItem => {
+      data.orderProducts.forEach(orderProduct => {
         element += `
                     <div class="cart-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144" /> <!-- 아이템 이미지 -->
+                        <img class="w-144 h-144" src="${orderProduct.orderedImage}"/> <!-- 아이템 이미지 -->
                         <div class="flex-col gap-15">
-                          <span class="cart-name"></span> <!-- 아이템 이름 -->
-                          <span class="cart-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
+                          <span class="cart-name">${orderProduct.orderedName}</span> <!-- 아이템 이름 -->
+                          <span class="cart-info">${orderProduct.orderedPrice}원 / 수량: ${orderProduct.quantity}개</span> <!-- 아이템 가격 및 수량 -->
                         </div>
                       </div>
                     </div>
@@ -78,7 +77,8 @@
       });
 
       document.querySelector('.order-item-list').innerHTML = element;
-      document.querySelector('.order-right-section .order-total-price').innerText = ` 원`; <!-- 아이템 가격 및 수량 -->
+      document.querySelector(
+          '.order-right-section .order-total-price').innerText = `${data.totalPrice} 원`; <!-- 아이템 가격 및 수량 -->
     }).catch((error) => {
       console.error(error);
     });
