--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -30,8 +30,7 @@
       return;
     }
 
-    // TODO: [4단계] 주문 목록 조회 스펙에 맞게 변경
-    fetch('', {
+    fetch('/api/order', {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${credentials}`,
@@ -43,14 +42,14 @@
       let element = '';
       data.forEach(order => {
         let itemElement = '';
-        order.items.forEach((item) => {
+        order.orderProducts.forEach((orderProduct) => {
           itemElement += `
                         <div class="order-list-item">
                           <div class="flex gap-15 mt-10">
-                            <img class="w-144 h-144" /> <!-- 아이템 이미지 -->
+                            <img class="w-144 h-144" src="${orderProduct.orderedImage}"/> <!-- 아이템 이미지 -->
                             <div class="flex-col gap-15">
-                              <span class="order-name"></span> <!-- 아이템 이름 -->
-                              <span class="order-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
+                              <span class="order-name">${orderProduct.orderedName}</span> <!-- 아이템 이름 -->
+                              <span class="order-info">${orderProduct.orderedPrice}원 / 수량: ${orderProduct.quantity}개</span> <!-- 아이템 가격 및 수량 -->
                             </div>
                           </div>
                         </div>
@@ -61,8 +60,8 @@
         element += `
                     <div class="order-list">
                       <div class="order-list__header">
-                        <span>주문 번호: </span> <!-- 주문 번호 -->
-                        <a href="">상세보기 ></a> <!-- 주문 상세 페이지로 연결 -->
+                        <span>주문 번호: ${order.orderId}</span> <!-- 주문 번호 -->
+                        <a href="/order-detail/${order.orderId}">상세보기 ></a> <!-- 주문 상세 페이지로 연결 -->
                       </div>
                       ${itemElement}
                     </div>
